Next Release
------------

- Added the ``iter_hierarchy`` method, which iterates over archived
  containers in a hierarchy more efficiently than repeated calls to
  ``container_contents``. Designed to help solve lp:913990.

1.0 (2011-11-17)
----------------

- Fixed lp:891277: Blob file chunks were sometimes retrieved in the
  wrong order due to an incorrect backref declaration.

0.2.1 (2011-09-22)
------------------

- Fixed packaging on PyPI (essential files were missing;
  setuptools-git was needed.)

0.2 (2011-09-15)
----------------

- Added the new_container_ids attribute to deleted item records.  This
  allows undeletion UIs to filter out objects that have moved to another
  container.  It should also allow applications to redirect users to the new
  location of a moved object.  No schema migration is needed.

- Added the get_version method to archives.  The get_version method is more
  efficient than iterating over the entire history of an object.

0.1 (2011-08-14)
----------------

- Initial release.